// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarMonthGrid componentWillMount() 1`] = `
Array [
  Array [
    2018-12-31T18:00:00.000Z,
    2019-01-01T18:00:00.000Z,
    2019-01-02T18:00:00.000Z,
    2019-01-03T18:00:00.000Z,
    2019-01-04T18:00:00.000Z,
    2019-01-05T18:00:00.000Z,
  ],
  Array [
    2019-01-06T18:00:00.000Z,
    2019-01-07T18:00:00.000Z,
    2019-01-08T18:00:00.000Z,
    2019-01-09T18:00:00.000Z,
    2019-01-10T18:00:00.000Z,
    2019-01-11T18:00:00.000Z,
    2019-01-12T18:00:00.000Z,
  ],
  Array [
    2019-01-13T18:00:00.000Z,
    2019-01-14T18:00:00.000Z,
    2019-01-15T18:00:00.000Z,
    2019-01-16T18:00:00.000Z,
    2019-01-17T18:00:00.000Z,
    2019-01-18T18:00:00.000Z,
    2019-01-19T18:00:00.000Z,
  ],
  Array [
    2019-01-20T18:00:00.000Z,
    2019-01-21T18:00:00.000Z,
    2019-01-22T18:00:00.000Z,
    2019-01-23T18:00:00.000Z,
    2019-01-24T18:00:00.000Z,
    2019-01-25T18:00:00.000Z,
    2019-01-26T18:00:00.000Z,
  ],
  Array [
    2019-01-27T18:00:00.000Z,
    2019-01-28T18:00:00.000Z,
    2019-01-29T18:00:00.000Z,
    2019-01-30T18:00:00.000Z,
  ],
]
`;

exports[`CalendarMonthGrid componentWillReceiveProps() 1`] = `
Array [
  Array [
    2017-10-31T18:00:00.000Z,
    2017-11-01T18:00:00.000Z,
    2017-11-02T18:00:00.000Z,
    2017-11-03T18:00:00.000Z,
    2017-11-04T18:00:00.000Z,
  ],
  Array [
    2017-11-05T18:00:00.000Z,
    2017-11-06T18:00:00.000Z,
    2017-11-07T18:00:00.000Z,
    2017-11-08T18:00:00.000Z,
    2017-11-09T18:00:00.000Z,
    2017-11-10T18:00:00.000Z,
    2017-11-11T18:00:00.000Z,
  ],
  Array [
    2017-11-12T18:00:00.000Z,
    2017-11-13T18:00:00.000Z,
    2017-11-14T18:00:00.000Z,
    2017-11-15T18:00:00.000Z,
    2017-11-16T18:00:00.000Z,
    2017-11-17T18:00:00.000Z,
    2017-11-18T18:00:00.000Z,
  ],
  Array [
    2017-11-19T18:00:00.000Z,
    2017-11-20T18:00:00.000Z,
    2017-11-21T18:00:00.000Z,
    2017-11-22T18:00:00.000Z,
    2017-11-23T18:00:00.000Z,
    2017-11-24T18:00:00.000Z,
    2017-11-25T18:00:00.000Z,
  ],
  Array [
    2017-11-26T18:00:00.000Z,
    2017-11-27T18:00:00.000Z,
    2017-11-28T18:00:00.000Z,
    2017-11-29T18:00:00.000Z,
  ],
]
`;

exports[`CalendarMonthGrid createMonth() 1`] = `
Array [
  Array [
    2009-09-30T18:00:00.000Z,
    2009-10-01T18:00:00.000Z,
    2009-10-02T18:00:00.000Z,
    2009-10-03T18:00:00.000Z,
  ],
  Array [
    2009-10-04T18:00:00.000Z,
    2009-10-05T18:00:00.000Z,
    2009-10-06T18:00:00.000Z,
    2009-10-07T18:00:00.000Z,
    2009-10-08T18:00:00.000Z,
    2009-10-09T18:00:00.000Z,
    2009-10-10T18:00:00.000Z,
  ],
  Array [
    2009-10-11T18:00:00.000Z,
    2009-10-12T18:00:00.000Z,
    2009-10-13T18:00:00.000Z,
    2009-10-14T18:00:00.000Z,
    2009-10-15T18:00:00.000Z,
    2009-10-16T18:00:00.000Z,
    2009-10-17T18:00:00.000Z,
  ],
  Array [
    2009-10-18T18:00:00.000Z,
    2009-10-19T18:00:00.000Z,
    2009-10-20T18:00:00.000Z,
    2009-10-21T18:00:00.000Z,
    2009-10-22T18:00:00.000Z,
    2009-10-23T18:00:00.000Z,
    2009-10-24T18:00:00.000Z,
  ],
  Array [
    2009-10-25T18:00:00.000Z,
    2009-10-26T18:00:00.000Z,
    2009-10-27T18:00:00.000Z,
    2009-10-28T18:00:00.000Z,
    2009-10-29T18:00:00.000Z,
    2009-10-30T18:00:00.000Z,
  ],
]
`;

exports[`CalendarMonthGrid getWeekDays() 1`] = `
Array [
  "Mo",
  "Tu",
  "We",
  "Th",
  "Fr",
  "Sa",
  "Su",
]
`;

exports[`CalendarMonthGrid render() basic 1`] = `
<div>
  <span
    onClick={[Function]}
  >
    January 2009
  </span>
  <table>
    <thead>
      <tr>
        <th
          key="Mo"
        >
          MO
        </th>
        <th
          key="Tu"
        >
          TU
        </th>
        <th
          key="We"
        >
          WE
        </th>
        <th
          key="Th"
        >
          TH
        </th>
        <th
          key="Fr"
        >
          FR
        </th>
        <th
          key="Sa"
        >
          SA
        </th>
        <th
          key="Su"
        >
          SU
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="2008-12-31T18:00:00.000Z"
      >
        <CalendarDay
          date={2008-12-31T18:00:00.000Z}
          key="2008-12-31T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-01T18:00:00.000Z}
          key="2009-01-01T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-02T18:00:00.000Z}
          key="2009-01-02T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-03T18:00:00.000Z}
          key="2009-01-03T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
      </tr>
      <tr
        key="2009-01-04T18:00:00.000Z"
      >
        <CalendarDay
          date={2009-01-04T18:00:00.000Z}
          key="2009-01-04T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-05T18:00:00.000Z}
          key="2009-01-05T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-06T18:00:00.000Z}
          key="2009-01-06T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-07T18:00:00.000Z}
          key="2009-01-07T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-08T18:00:00.000Z}
          key="2009-01-08T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-09T18:00:00.000Z}
          key="2009-01-09T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-10T18:00:00.000Z}
          key="2009-01-10T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
      </tr>
      <tr
        key="2009-01-11T18:00:00.000Z"
      >
        <CalendarDay
          date={2009-01-11T18:00:00.000Z}
          key="2009-01-11T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-12T18:00:00.000Z}
          key="2009-01-12T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-13T18:00:00.000Z}
          key="2009-01-13T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-14T18:00:00.000Z}
          key="2009-01-14T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-15T18:00:00.000Z}
          key="2009-01-15T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-16T18:00:00.000Z}
          key="2009-01-16T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-17T18:00:00.000Z}
          key="2009-01-17T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
      </tr>
      <tr
        key="2009-01-18T18:00:00.000Z"
      >
        <CalendarDay
          date={2009-01-18T18:00:00.000Z}
          key="2009-01-18T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-19T18:00:00.000Z}
          key="2009-01-19T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-20T18:00:00.000Z}
          key="2009-01-20T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-21T18:00:00.000Z}
          key="2009-01-21T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-22T18:00:00.000Z}
          key="2009-01-22T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-23T18:00:00.000Z}
          key="2009-01-23T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-24T18:00:00.000Z}
          key="2009-01-24T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
      </tr>
      <tr
        key="2009-01-25T18:00:00.000Z"
      >
        <CalendarDay
          date={2009-01-25T18:00:00.000Z}
          key="2009-01-25T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-26T18:00:00.000Z}
          key="2009-01-26T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-27T18:00:00.000Z}
          key="2009-01-27T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-28T18:00:00.000Z}
          key="2009-01-28T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-29T18:00:00.000Z}
          key="2009-01-29T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
        <CalendarDay
          date={2009-01-30T18:00:00.000Z}
          key="2009-01-30T18:00:00.000Z"
          onClick={[Function]}
          style={Object {}}
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CalendarMonthGrid setDayStyle() should be highlightStyle if highlight is date 1`] = `
Object {
  "backgroundColor": "#34495e",
  "color": "#fff",
}
`;

exports[`CalendarMonthGrid setDayStyle() should be highlightStyle if hightlight is array 1`] = `
Object {
  "backgroundColor": "#34495e",
  "color": "#fff",
}
`;

exports[`CalendarMonthGrid setDayStyle() should be rangeStyle 1`] = `
Object {
  "backgroundColor": "#8196ab",
  "color": "#fff",
}
`;
